# rabbit

./: CONTRIBUTING.md  Cargo.toml  Makefile  build.rs  clippy-cleanup-trigger.txt
.github/: fix_clippy.py
.github/workflows/: agent-fix-clippy.yml  agent-run-clippy-fix.yml  fix-clippy.yml
scripts/: test-client-video  test-gpu  test-gstreamer  test-host-video  test-kms  test-kms-capture
src/: lib.rs  main.rs
src/app/: config.rs  deps.rs  gui.rs  logging.rs  mod.rs  model.rs  screen_stream.rs
src/app/gui/: state.rs  video_view.rs  view.rs
src/app/gui/state/: connection.rs  stream.rs  view_model.rs
src/app/gui/video_view/: backend.rs
src/app/logging/: file_writer.rs  logger_thread.rs
src/infra/: connection_endpoint.rs  connection_request.rs  mod.rs  quic_endpoint.rs  rayon_thread_pool.rs  tcp_endpoint.rs  unsync_queue.rs  worker_reaper.rs
src/infra/platform/linux/: client_video_probe.rs  dma_buf.rs  egl_dma_buf.rs  frame_pipeline.rs  gpu.rs  mod.rs  video_probe.rs
src/infra/platform/linux/frame_pipeline/: worker.rs
src/infra/platform/linux/screen_capture/: device.rs  framebuffer.rs  mod.rs  output.rs  types.rs
src/infra/platform/linux/screen_capture/kms/: capture.rs  composition.rs  device.rs  egl_context.rs  egl_ext.rs  framebuffer.rs  gbm_allocator.rs  gl_context.rs  mod.rs  output.rs  subscription.rs  types.rs  worker.rs
src/infra/platform/linux/screen_layout/: mod.rs  niri.rs
src/infra/platform/linux/video_decoder/: mod.rs
src/infra/platform/linux/video_encoder/: gstreamer.rs  mod.rs
src/infra/platform/linux/video_encoder/gstreamer/: probe.rs  va_surface.rs
src/infra/platform/linux/video_renderer/: mod.rs  wayland.rs
src/infra/transport/: mod.rs  quic.rs  tcp.rs
src/kernel/: connection_request.rs  frame_pipeline.rs  geometry.rs  mod.rs  screen_capture.rs  screen_configuration.rs  screen_manager.rs  screen_stream.rs  session.rs  session_control.rs  transport.rs  video_decoder.rs  video_encoder.rs  video_renderer.rs
ui/: app.slint  types.slint
ui/components/: common.slint  icons.slint  remote-screen.slint  sidebar.slint
ui/pages/: connected.slint
