[package]
name = "rabbit"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0"
eros = "0.6"
compio = { version = "0.18", features = ["quic", "ring"] }
bytes = "1"
futures-core = "0.3"
futures-channel = "0.3"
thiserror = "2.0"
thin-cell = "0.2"
kudi = "0.1"
rayon = "1"
rcgen = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# Linux screen layout and KMS capture backends.
[target.'cfg(target_os = "linux")'.dependencies]
# niri-ipc does not guarantee Rust API compatibility across version updates.
niri-ipc = "26.4.0"
winio = { version = "0.11" }
