[package]
name = "rabbit"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0"
eros = "0.7"
compio = { version = "0.19", features = ["quic", "ring", "time"] }
bytes = "1"
binrw = "0.15"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
flume = { version = "0.12", default-features = false, features = ["async", "eventual-fairness"] }
thiserror = "2.0"
thin-cell = "0.2"
kudi = "0.1"
rayon = "1"
rcgen = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
slint = { version = "1.17.1", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "raw-window-handle-06", "renderer-femtovg", "std"] }

# Linux screen layout and KMS capture backends.
[target.'cfg(target_os = "linux")'.dependencies]
# niri-ipc does not guarantee Rust API compatibility across version updates.
drm = "0.15"
gbm = { version = "0.18", default-features = false }
glow = "0.18"
gstreamer = { version = "0.25", features = ["v1_24"] }
gstreamer-allocators = { version = "0.25", features = ["v1_24"] }
gstreamer-app = { version = "0.25", features = ["v1_24"] }
gstreamer-video = { version = "0.25", features = ["v1_24"] }
khronos-egl = { version = "6.0", features = ["dynamic"] }
niri-ipc = "26.4.0"

[build-dependencies]
slint-build = "1.17.1"
